engine/codex-rs/tui/src/app/tests/snapshots/codex_tui__app__tests__background_task_defaults_tests__command_center_session_start_error.snap
---
source: tui/src/app/tests/background_task_defaults_tests.rs
expression: "crate::chatwidget::tests::helpers::render_bottom_popup(&app.chat_widget, 80,)"
---
  Unable to complete action
  Failed to start session: thread/start failed during TUI bootstrap: thread/
  start failed: replacement unavailable (code -32603)


› 1. Return to command center

  enter select · esc back
